--- a/config/database.yml
+++ b/config/database.yml
@@ -23,8 +23,9 @@ default: &default
 
 development:
   <<: *default
-  database: BikeLockAPI_development
-
+  database: beer_compass
+  username: beer_compass
+  password: beer_compass
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
@@ -57,7 +58,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: BikeLockAPI_test
+  database: beer_compass_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: BikeLockAPI_production
-  username: BikeLockAPI
-  password: <%= ENV['BIKELOCKAPI_DATABASE_PASSWORD'] %>
+  database: beer_compass
+  username: beer_compass
+  password: <%= ENV['BEER_COMPASS_DATABASE_PASSWORD'] %>
