--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,8 @@ test:
 #
 production:
   <<: *default
-  database: beer_compass
-  username: beer_compass
-  password: <%= ENV['BEER_COMPASS_DATABASE_PASSWORD'] %>
+  host: <%= ENV['POSTGRES_PORT_5432_TCP_ADDR'] %>
+  port: <%= ENV['POSTGRES_PORT_5432_TCP_PORT'] %>
+  database: beercompass
+  username: postgres
+  password: ''
